--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.90.5",
+    "openapi-fetch": "^0.15.0",
+    "openapi-typescript": "^7.10.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
