api.ymlにログイン成功時のtoken含める

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -23,7 +23,12 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  token:
+                    type: string
+                required:
+                  - token
         401:
           description: 未認証
           content:
