--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.15",
     "@tanstack/vue-query": "^5.90.5",
     "openapi-fetch": "^0.15.0",
     "openapi-typescript": "^7.10.1",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.15",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
